fix(landpage): footer styling on mobile

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -91,16 +91,6 @@ body,
     user-select: none; /* Standard */
 }
 
-#skills {
-    background: rgb(255, 243, 243);
-    background: linear-gradient(
-        345deg,
-        rgba(255, 243, 243, 1) 0%,
-        rgba(240, 219, 79, 1) 23%,
-        rgba(60, 135, 58, 1) 84%
-    );
-}
-
 html {
     overflow: overlay;
 }
@@ -120,11 +110,11 @@ html::-webkit-scrollbar-thumb {
 }
 
 html::-webkit-scrollbar-thumb:hover {
-    background: white;
+    background: rgb(70 71 68 / var(--tw-bg-opacity));
     border-radius: 10px;
 }
 
 html::-webkit-scrollbar-thumb:active {
-    background: white;
+    background: rgb(70 71 68 / var(--tw-bg-opacity));
     border-radius: 10px;
 }
